Add description, ingredients and steps to the lasagna and candied yams recipes

--- a/recipes/Candied_Yams.html
+++ b/recipes/Candied_Yams.html
@@ -9,6 +9,20 @@
         <h1>Candied Yams</h1>
         <img src="./pictures/Candied_Yams.jpg" alt="A picture of candied yams." width="300" height="200">
 
+        <h3>Description</h3>
+        <p>This dish is made with tender yams or sweet potatoes, 
+            which are cooked until soft and then coated in a rich, syrupy glaze.</p>
+        <p>This dish is an all-time favorite during the holiday seasons.</p>
+        
+        <h3>Ingredients</h3>
+        <ul>
+            <li>1 can sweet potatoes, drained</li> 
+            <li>¼ cup butter, cut into pieces</li>
+            <li>½ cup brown sugar</li>
+            <li>1 ½ cups miniature marshmallows</li>
+        </ul>
+
+        <h3>Steps</h3>
 
         <h3>Back To All Recipes</h3>
         <a href="../index.html">Homepage</a>
