--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -9,8 +9,38 @@
         <h1>Lasagna</h1>
         <img src="./pictures/Lasagna.jpg" alt="A picture of lasagna." width="300" height="200">
     
-    
-        <h3>Back to the Homepage</h3>
+        <h3>Description</h3>
+        <p>Lasagna is a classic italian dish made out of meat, cheese, pasta, spices and seasonings, and of course, tomatoes.</p>
+
+        <h3>Ingredients</h3>
+        <ul>
+            <li>lean ground meat</li>
+            <li>An Onion</li>
+            <li>Two cloves of garlic</li>
+            <li>A can of crushed tomatoes</li>
+            <li>Two cans of tomato sauce</li>
+            <li>Two cans of tomato paste</li>
+            <li>Two tablespoons of white sugar</li>
+            <li>Fresh parsley, dried basil leaves, salt, Italian seasoning, fennel seeds, and black pepper</li>
+            <li>Lasagna noodles</li>
+            <li>Parmesan, Mozzarella, and ricotta cheese</li>
+            <li>An Egg</li>
+        </ul>
+
+        <h3>Steps</h3>
+        <ol>
+            <li>Make the meat sauce.</li>
+            <li>Cook the noodles.</li>
+            <li>Make the ricotta mixture.</li>
+            <li>Layer the lasagna according to the following order: meat sauce, noodles, ricotta mixture, 
+                mozzarella slices, meat sauce, parmesan cheese. Repeat the layers, then top with the remaining parmesan.</li>
+            <li>Cover with foil and bake.</li>
+            <li>Let the lasagna rest before serving.</li>
+        </ol>
+
+        <p>Recipe by John Chandler</p>
+
+        <h3>Back To All Recipes</h3>
         <a href="../index.html">Homepage</a>
     </body>
 </html>
