Add more information to the lasagna recipe.

--- a/recipes/Homemade_Mac_and_Cheese.html
+++ b/recipes/Homemade_Mac_and_Cheese.html
@@ -9,8 +9,13 @@
         <h1>Homemade Mac and Cheese</h1>
         <img src="./pictures/Homemade_Mad_and_Cheese.jpg" alt="A picture of homemade mac and cheese" width="300" height="200">
 
+        <h3>Description</h3>
 
-        <h3>Back to the Homepage</h3>
+        <h3>Ingredients</h3>
+
+        <h3>Steps</h3>
+        
+        <h3>Back To All Recipes</h3>
         <a href="../index.html">Homepage</a>
     </body>
 </html>
