--- a/recipes/Pefect_Mashed_Potatoes.html
+++ b/recipes/Pefect_Mashed_Potatoes.html
@@ -9,9 +9,13 @@
         <h1>Perfect Mashed Potatoes</h1>
         <img src="./pictures/Perfect__Mashed_Potatoes.jpg" alt="A picture of mashed potatoes." width="300" height="200">
    
-   
+        <h3>Description</h3>
+
+        <h3>Ingredients</h3>
+
+        <h3>Steps</h3>
    
         <h3>Back To All Recipes</h3>
-        <a href="../index.html">Homepage</a>
+        <a href="../index.html" target="_blank" rel="noopener noreferrer">Homepage</a>
     </body>
 </html>
