--- a/recipes/Candied_Yams.html
+++ b/recipes/Candied_Yams.html
@@ -11,8 +11,7 @@
 
         <h3>Description</h3>
         <p>This dish is made with tender yams or sweet potatoes, 
-            which are cooked until soft and then coated in a rich, syrupy glaze.</p>
-        <p>This dish is an all-time favorite during the holiday seasons.</p>
+            which are cooked until soft and then coated in a rich, syrupy glaze. It's an all time favourite during the holiday season.</p>
         
         <h3>Ingredients</h3>
         <ul>
@@ -23,8 +22,15 @@
         </ul>
 
         <h3>Steps</h3>
+        <ol>
+            <li>Gather all ingredients. Preheat the oven to 400 degrees F (200 degrees C).</li>
+            <li>Place drained sweet potatoes in a medium baking dish. Distribute butter pieces evenly over the sweet potatoes.</li>
+            <li>Sprinkle with brown sugar. Layer with miniature marshmallows.</li>
+            <li>Bake in the preheated oven until sweet potatoes are tender and marshmallows have melted, about 20 to 25 minutes.</li>
+        </ol>
 
-        <h3>Back To All Recipes</h3>
-        <a href="../index.html">Homepage</a>
+        <p>Recipe by LORIEANN29</p>
+
+        <a href="../index.html" target="_blank" rel="noopener noreferrer">Homepage</a>
     </body>
 </html>
