--- a/recipes/Pefect_Mashed_Potatoes.html
+++ b/recipes/Pefect_Mashed_Potatoes.html
@@ -10,12 +10,26 @@
         <img src="./pictures/Perfect__Mashed_Potatoes.jpg" alt="A picture of mashed potatoes." width="300" height="200">
    
         <h3>Description</h3>
-
+        <p> Creamy, fluffy, and smooth, with a light, airy texture that melts in your mouth.</p>
+        
         <h3>Ingredients</h3>
+        <ul>
+            <li>3 large russet potatoes, peeled and cut in half lengthwise</li>
+            <li>½ cup whole milk</li>
+            <li>¼ cup butter</li>
+            <li>salt and ground black pepper to taste</li>
+        </ul>
 
         <h3>Steps</h3>
-   
-        <h3>Back To All Recipes</h3>
+         <ol>
+            <li>Place potatoes in a large pot and cover with salted water. 
+                Bring to a boil. Reduce heat to medium-low, cover, and simmer until tender, 20 to 25 minutes.</li>
+            <li>Drain potatoes, then return to the pot. Turn heat to high and allow potatoes to dry for about 30 seconds. Turn off heat.</li>
+            <li>Mash potatoes with a potato masher twice around the pot, then add milk and butter. Continue to mash until smooth and fluffy. 
+                Whisk in salt and black pepper until evenly distributed, about 15 seconds.</li>
+        </ol>
+
+        <p>Recipe by John Mitzewich</p>
         <a href="../index.html" target="_blank" rel="noopener noreferrer">Homepage</a>
     </body>
 </html>
