--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -56,7 +56,6 @@
 
         <p>Recipe by John Chandler</p>
 
-        <h3>Back To All Recipes</h3>
-        <a href="../index.html">Homepage</a>
+        <a href="../index.html" target="_blank" rel="noopener noreferrer">Homepage</a>
     </body>
 </html>
